--- a/src/app/ui/components/product/product-card/product-card.component.scss
+++ b/src/app/ui/components/product/product-card/product-card.component.scss
@@ -59,7 +59,7 @@ $link-color: #0000ee;
     img {
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: contain;
       transition: transform 0.3s ease;
     }
 
