--- a/src/app/ui/components/product/product-grid/product-grid.component.scss
+++ b/src/app/ui/components/product/product-grid/product-grid.component.scss
@@ -133,6 +133,7 @@ $link-color: #0000ee;
   
         .product-list {
           grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+          display: flex;
         }
       }
   
